Página por Pais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="row container mt-4">
 
     <div class="col-3">
-        <h2>Busquedas</h2>
+        <app-sidebar></app-sidebar>
+        <!-- <h2>Busquedas</h2>
         <hr>
         <ul class="list-group">
             <li routerLink="" 
@@ -20,7 +21,7 @@
                 class="list-group-item">
                 Por Capital
             </li>
-        </ul>
+        </ul> -->
     </div>
 
     <div class="col container">
