--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -16,13 +16,13 @@
 </div>
 
 <hr>
-<div class="alert alert-danger">
-    No se encontro el remino
+<div *ngIf="hayError" class="alert alert-danger">
+    No hay ningún país "{{termino}}"
 </div>
 
-<div class="row">
-    <div class="col">
-        <table class="table table-hover">
+<div class="row" *ngIf="!hayError">
+    <div class="col" *ngIf="paises.length > 0">
+        <table class="table table-hover" >
             <thead>
                 <th>#</th>
                 <th>Bandera</th>
@@ -31,13 +31,15 @@
                 <th></th>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>XXX</td>
-                    <td>México</td>
-                    <td>1000</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td>{{i+1}}</td>
                     <td>
-                        <a href="http://">Ver...</a>
+                        <img class="small-flag" [src]="pais.flags.svg" alt="{{pais.name.common}}">
+                    </td>
+                    <td>{{pais.name.common}}</td>
+                    <td>{{pais.population | number}}</td>
+                    <td>
+                        <a [routerLink]="['/pais/',pais.cca2]" routerLinkActive="router-link-active" >Ver...</a>
                     </td>
                 </tr>
             </tbody>
