--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,15 +3,9 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off">
-            <input 
-                type="search" 
-                name="termino" 
-                placeholder="Buscat País"
-                class="form-control"
-                [(ngModel)]="termino"
-                (keyup.enter)="buscar()">
-        </form>
+        <app-pais-input
+            (onEnter)="buscar($event)"
+        ></app-pais-input>
     </div>
 </div>
 
@@ -22,27 +16,6 @@
 
 <div class="row" *ngIf="!hayError">
     <div class="col" *ngIf="paises.length > 0">
-        <table class="table table-hover" >
-            <thead>
-                <th>#</th>
-                <th>Bandera</th>
-                <th>Nombre</th>
-                <th>Población</th>
-                <th></th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises; let i = index">
-                    <td>{{i+1}}</td>
-                    <td>
-                        <img class="small-flag" [src]="pais.flags.svg" alt="{{pais.name.common}}">
-                    </td>
-                    <td>{{pais.name.common}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <td>
-                        <a [routerLink]="['/pais/',pais.cca2]" routerLinkActive="router-link-active" >Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
