Funicionamiento por Capital

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -2,7 +2,7 @@
     <input 
         type="search" 
         name="termino" 
-        placeholder="Buscar País"
+        placeholder="{{placeholder}}"
         class="form-control"
         [(ngModel)]="termino"
         (keyup.enter)="buscar()"
