--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,23 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <app-pais-input
+            (onEnter)="buscar($event)"
+            (onDebounce)="sugerencias($event)"
+            placeholder="Buscar Capital"
+        ></app-pais-input>
+    </div>
+</div>
+
+<hr>
+<div *ngIf="hayError" class="alert alert-danger">
+    No hay ningúna capital "{{termino}}"
+</div>
+
+<div class="row" *ngIf="!hayError">
+    <div class="col" *ngIf="paises.length > 0">
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
