--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
         </ul> -->
     </div>
 
-    <div class="col container">
+    <div class="col-9">
         <router-outlet></router-outlet>
     </div>
 </div>
