--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,62 @@
-<p>ver-pais works!</p>
+<div class="alert alert-info" *ngIf="!pais; else divPais">
+    Espere por favor...
+</div>
+
+<ng-template #divPais>
+    <div class="row">
+        <div class="col-12">
+            <h1>Pais: <small>{{pais.name.common}}</small></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img [src]="pais.flags.svg" class="img-thumbnail"/>
+        </div>
+
+        <div class="col">
+            <h3>Información</h3>
+            <ul class="lisy-group">
+                <li class="list-group-item">
+                    <strong>Poblacion:</strong> {{pais.population}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Código Numerico:</strong> {{pais.ccn3}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Código alpha3:</strong> {{pais.cca3}}
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <h3>Traducciones</h3>
+
+    <div class="row">
+        <div class="col">
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['spa'].common}}
+            </span>
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['deu'].common}}
+            </span>
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['ara'].common}}
+            </span>
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['fin'].common}}
+            </span>
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['jpn'].common}}
+            </span>
+            <span class="badge bg-primary ms-1">
+                {{pais.translations['zho'].common}}
+            </span>
+        </div>
+    </div>
+
+    <pre mt-5>
+        {{pais|json}}
+    </pre>
+</ng-template>
+
