--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -18,7 +18,7 @@
             <h3>Información</h3>
             <ul class="lisy-group">
                 <li class="list-group-item">
-                    <strong>Poblacion:</strong> {{pais.population}}
+                    <strong>Poblacion:</strong> {{pais.population | number}}
                 </li>
                 <li class="list-group-item">
                     <strong>Código Numerico:</strong> {{pais.ccn3}}
