--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-4">
             <h3>Bandera</h3>
-            <img [src]="pais.flags.svg" class="img-thumbnail"/>
+            <img [src]="pais.flags.svg" class="img-thumbnail animate__animated animate__flipInX"/>
         </div>
 
         <div class="col">
@@ -34,22 +34,22 @@
 
     <div class="row">
         <div class="col">
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['spa'].common}}
             </span>
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['deu'].common}}
             </span>
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['ara'].common}}
             </span>
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['fin'].common}}
             </span>
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['jpn'].common}}
             </span>
-            <span class="badge bg-primary ms-1">
+            <span class="badge bg-primary ms-1 animate__animated animate__rollIn">
                 {{pais.translations['zho'].common}}
             </span>
         </div>
