--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -7,7 +7,7 @@
         <th></th>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of paises; let i = index">
+        <tr *ngFor="let pais of paises; let i = index" class="animate__animated animate__flipInX">
             <td>{{i+1}}</td>
             <td>
                 <img class="small-flag" [src]="pais.flags.svg" alt="{{pais.name.common}}">
