--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,14 +1,16 @@
-<h2>Por País</h2>
+<div class="animate__animated animate__fadeIn">
+    <h2>Por País</h2>
 <hr>
 
 <div class="row">
     <div class="col">
         <app-pais-input
-            (onEnter)="buscar($event)"
-            (onDebounce)="sugerencias($event)"
-            placeholder="Buscar Pais"
+        (onEnter)="buscar($event)"
+        (onDebounce)="sugerencias($event)"
+        placeholder="Buscar Pais"
         ></app-pais-input>
     </div>
+</div>
 </div>
 
 <hr>
