--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -11,6 +11,7 @@
         }" -->
         <!-- [class]="(region === regionActiva)? 'btn btn-success ms-3':'btn btn-outline-success ms-3'" -->
         <button 
+            class="animate__animated animate__fadeInBottomRight"
             *ngFor="let region of regiones"
             [class]="getClaseCss( region )"
             (click)="activarRegion(region)">
