--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -12,7 +12,23 @@
     </div>
 </div>
 </div>
-
+<ul *ngIf="mostrarSugerencias" class="list-group">
+    <li 
+        class="list-group-item list-group-item-action"
+        *ngFor="let item of paisesSugeridos">
+        <a class="nav-link"
+            [routerLink]="['/pais',item.cca2]">
+            {{item.name.common}}
+        </a>
+    </li>
+    <li 
+        class="list-group-item list-group-item-action"
+        (click)="buscarSugerido(termino)">
+        <a class="nav-link">
+            Buscar "{{termino}}"
+        </a>
+    </li>
+</ul>
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No hay ningún país "{{termino}}"
